--- a/DD/DD.tex
+++ b/DD/DD.tex
@@ -529,6 +529,45 @@ Up to now we have integrated all the components of the subsystems (The requests 
 
 \subsection{System testing}
 The integrated system will have to be tested with black-box tests. This means that the code will be tested only from a behavioural point of view and not a structural one. Functional and non functional requirements will be tested. The functional ones will be tested in order to test that the system meets the functional requirements. Instead, the non functional requirements concern the performances, the load and the stress. All these aspects will have to be tested. To see what are the requirements (both functional or non functional) you have to refer to the RASD. 
-
+\newpage
 \section{Effort spent}
+\begin{longtable}{| p{12 cm} | p{2 cm} |} 
+		\hline
+		{\bf Task} & {\bf Hours}\\
+		\hline
+		 Group work on chapter 1 &  4\\
+		 section 2.1, 2.3, 2.6, 2.7 & 12 \\
+		 Chapter 3 & 6 \\
+		 Chapter 4 (done in group) & 12 \\
+		 Chapter 5 & 5 \\
+		 Group review  & 7 \\
+		\hline
+		&  {\bf Total} \\
+		\hline
+		&  46.0 \\
+		\hline
+		\caption{Luca Massini's effort}
+	\end{longtable}
+	
+	
+	
+	\begin{longtable}{| p{12 cm} | p{2 cm} |} 
+		\hline
+		{\bf Task} & {\bf Hours}\\
+		\hline
+		 Group work on chapter 1 & 4 \\
+		 Sections 1.3 & 1 \\
+		 Section 1.4, 1.5 & 0.5 \\
+		 Section 2.2 & 6\\ 
+		 section 2.4 & 15 \\
+		 section 2.5 & 3 \\
+		 Chapter 4 (done in group)& 12 \\
+		 Group review & 7\\
+		\hline
+		&  {\bf Total} \\
+		\hline
+		&  48.5 \\
+		\hline
+		\caption{Daniele Nicolò's effort}
+	\end{longtable}
 \end{document}
